--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="assets/images/max_postkasse.jpg" alt="Remarkable Digital Products" class="img-fluid w-100 rounded" width="372px">
+                                <img src="/assets/images/Puppy_Max_and_me-removebg-preview.png" alt="Remarkable Digital Products" class="img-fluid w-100 rounded" width="372px">
                             </div>
                         </div>
         </div>
@@ -106,7 +106,7 @@
                         <ul class="service-list list-group list-group-flush">
                             <li class="list-group-item">Play with tennis balls</li>
                             <li class="list-group-item">Open christmas gifts</li>
-                            <li class="list-group-item">Running like Ulsain Bolt</li>
+                            <li class="list-group-item">Run like Ulsain Bolt</li>
                             <li class="list-group-item">Chillax with my folks</li>
                         </ul>
                     </div>
