--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 </head>
 
 <body>
-    <div class="hiro-loader"></div>
     <header class="hiro-header home-header">
         <div class="container wow fadeInUp">
-            <div id="hiroHeaderCarousel" class="hiro-header-carousel carousel slide" data-ride="carousel" data-interval=".">
+            <div id="hiroHeaderCarousel" class="hiro-header-carousel carousel slide">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-6">
                                 <h1 class="carousel-item-title" data-animation="animated fadeInRight"><span>About Max</span></h1>
-                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that knows him, that just makes him ever so special.</p>
+                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that knows him,that just makes him ever so special.</p>
                                 <a href="#!" class="carousel-item-link link-hover-fx" data-animation="animated fadeInRight">WALK WITH ME</a>
                                 <ul class="carousel-item-social-links nav" data-animation="animated fadeInRight">
                                     <li>
@@ -39,63 +38,6 @@
                         </div>
         </div>
     </header>
-    <div class="hiro-nav-popup-modal">
-        <div class="hiro-nav-popup-modal-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 menu-wrapper">
-                        <ul class="nav hiro-main-nav">
-                            <li class="nav-item">
-                                <a href="index.html" class="nav-link">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#about" class="nav-link">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#services" class="nav-link">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#works" class="nav-link">Works</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 blog-posts text-white">
-                        <h5 class="popup-blog-headng">Blog</h5>
-                        <div class="media mb-4">
-                            <img src="assets/images/Blog_small2.jpg" alt="blog" width="86px" class="img-fluid mr-4">
-                            <div class="media-body align-self-end">
-                                <h5 class="popup-blog-post-title">Ambitious <br> designs</h5>
-                            </div>
-                        </div>
-                        <div class="media mb-4">
-                            <img src="assets/images/Blog_small1.jpg" alt="blog" width="86px" class="img-fluid mr-4">
-                            <div class="media-body align-self-end">
-                                <h5 class="popup-blog-post-title">The Collection <br> Cover Archive</h5>
-                            </div>
-                        </div>
-                        <p><a href="blog.html" class="text-white link-hover-fx text-decoration-none" class="font-weight-medium">View more</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <section class="bg-primary hiro-section" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 d-flex flex-column justify-content-center wow fadeInUp">
-                    <h2 class="section-title mb-3">Take me on a walk!</h2>
-                    <p class="section-text-ct">Book a walk directly from my calendar. I am available 365 days a year.</p>
-                </div>
-                <div class="col-md-6 wow fadeInUp">
-                    <img src="assets/images/img_3.png" class="w-100 mb-5" alt="Digital Product Design">
-                    <button class="hiro-btn-outline">View my calendar</button>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="hiro-section" id="services">
         <div class="container">
             <div class="service-section">
@@ -106,7 +48,7 @@
                         <ul class="service-list list-group list-group-flush">
                             <li class="list-group-item">Play with tennis balls</li>
                             <li class="list-group-item">Open christmas gifts</li>
-                            <li class="list-group-item">Run like Ulsain Bolt</li>
+                            <li class="list-group-item">Running like Ulsain Bolt</li>
                             <li class="list-group-item">Chillax with my folks</li>
                         </ul>
                     </div>
@@ -133,22 +75,23 @@
         </div>
     </section>
 
-</section>
-<section class="career-section hiro-section bg-primary">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="section-title wow fadeInLeft">
-                    Highlights <br> from walks with me
-                </h2>
-            </div>
-            <div class="col-md-6 wow fadeInRight">
+    <section class="bg-primary hiro-section" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex flex-column justify-content-center wow fadeInUp">
+                    <h2 class="section-title mb-3">Take me on a walk!</h2>
+                    <p class="section-text-ct">Book a walk directly from my calendar. I am available 365 days a year.</p>
+                </div>
+                <div class="col-md-6 wow fadeInUp">
+                    <img src="assets/images/img_3.png" class="w-100 mb-5" alt="Digital Product Design">
+                    <button class="hiro-btn-outline">View my calendar</button>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-    <section class="team-section hiro-section">
+    <section class="team-section hiro-section bg-primary">
+        <h2>Highlights from walks with me</h2>
 <!-- Gallery -->
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
@@ -194,7 +137,7 @@
     </div>
   </div>
   <!-- Gallery -->
- 
+    </section>
 </body>
 
 </html>
