--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <script src="assets/js/loader.js"></script>
+        <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
 </head>
 
 <body>
@@ -21,20 +25,20 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h1 class="carousel-item-title" data-animation="animated fadeInRight"><span>About Max</span></h1>
-                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that knows him,that just makes him ever so special.</p>
-                                <a href="#!" class="carousel-item-link link-hover-fx" data-animation="animated fadeInRight">WALK WITH ME</a>
+                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that knows him, that just makes him ever so special.</p>
+                                <button class="btn btn-primary mr-auto">WALK WITH ME</button>
                                 <ul class="carousel-item-social-links nav" data-animation="animated fadeInRight">
+                                    <p>Follow me on</p>
                                     <li>
-                                        <a href="#!" class="link-hover-fx"> INSTAGRAM</a>
+                                        <a href="https://www.instagram.com/poodle_maximillian" target="_blank" class="link-hover-fx">INSTAGRAM</a>
                                     </li>
                                     <li>
-                                        <a href="#!" class="link-hover-fx">TIKTOK</a>
+                                        <a href="https://www.tiktok.com/@angie.brown.cheese?_t=8WdGJY8Mnzi&_r=1" target="_blank" class="link-hover-fx">TIKTOK</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-md-6">
-                                <img src="/assets/images/Puppy_Max_and_me-removebg-preview.png" alt="Remarkable Digital Products" class="img-fluid w-100 rounded" width="372px">
-                            </div>
+                            <div class="col-md-6" animation="animate__wobble">
+                                    <img src="/assets/images/Puppy_Max_and_me-removebg-preview.png" alt="Max-background-image" class="img-fluid w-100 rounded" width="335px">
                         </div>
         </div>
     </header>
