--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h1 class="carousel-item-title" data-animation="animated fadeInRight"><span>About Max</span></h1>
-                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that knows him, that just makes him ever so special.</p>
-                                <button class="btn btn-primary mr-auto">WALK WITH ME</button>
+                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that know him, that just makes him ever so special.</p>
+                                <a href="https://www.calendly.com/turmedmax/30min" class="btn btn-primary mr-auto">WALK WITH ME</a>
                                 <ul class="carousel-item-social-links nav" data-animation="animated fadeInRight">
                                     <p>Follow me on</p>
                                     <li>
