--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-6 wow fadeInUp">
                     <img src="assets/images/img_3.png" class="w-100 mb-5" alt="Digital Product Design">
-                    <button class="hiro-btn-outline">View my calendar</button>
+                    <a href="https://www.calendly.com/turmedmax/30min" class="hiro-btn-outline">View my calendar</a>
                 </div>
             </div>
         </div>
