--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h1 class="carousel-item-title" data-animation="animated fadeInRight"><span>About Max</span></h1>
-                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and he has a severe underbite. But for all that know him, that just makes him ever so special.</p>
+                                <p class="carousel-item-description" data-animation="animated fadeInRight">Max (Maxillian Augusto Constantine Cornelius VI) is a charming, well-mannered miniature poodle living in Asker, Norway. He is slightly (under)diagnosed with ADHD, and has a severe underbite. But for all that know him, that just makes him ever so special.</p>
                                 <a href="https://www.calendly.com/turmedmax/30min" class="btn btn-primary mr-auto">WALK WITH ME</a>
                                 <ul class="carousel-item-social-links nav" data-animation="animated fadeInRight">
                                     <p>Follow me on</p>
@@ -45,7 +45,6 @@
     <section class="hiro-section" id="services">
         <div class="container">
             <div class="service-section">
-                <h2 class="section-title career-section-title">More about me</h2>
                 <div class="row">
                     <div class="col-md-4 mb-4 mb-md-0 wow fadeInUp">
                         <h6 class="service-category-title">Favorite activities</h6>
@@ -83,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex flex-column justify-content-center wow fadeInUp">
-                    <h2 class="section-title mb-3">Take me on a walk!</h2>
+                    <h2 class="section-title mb-3">Take me with you!</h2>
                     <p class="section-text-ct">Book a walk directly from my calendar. I am available 365 days a year.</p>
                 </div>
                 <div class="col-md-6 wow fadeInUp">
